--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -12,6 +12,7 @@
     <label>Content: <textarea th:field="*{content}"></textarea></label><br>
     <label>Author: <input type="text" th:field="*{author}" /></label><br>
     <label>Published At: <input type="datetime-local" th:field="*{publishedAt}" /></label><br>
+    <label>Tags: <input type="text" name="tagString" placeholder="Enter tags separated by commas" /></label><br>
     <button type="submit">Save</button>
 </form>
 </body>
