--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -8,10 +8,10 @@
 <h1>Create Post</h1>
 <form th:action="@{/posts}" th:object="${post}" method="post">
     <label>Title: <input type="text" th:field="*{title}" /></label><br>
-    <label>Excerpt: <input type="text" th:field="*{excerpt}" /></label><br>
+<!--    <label>Excerpt: <input type="text" th:field="*{excerpt}" /></label><br>-->
     <label>Content: <textarea th:field="*{content}"></textarea></label><br>
     <label>Author: <input type="text" th:field="*{author}" /></label><br>
-    <label>Published At: <input type="datetime-local" th:field="*{publishedAt}" /></label><br>
+<!--    <label>Published At: <input type="datetime-local" th:field="*{publishedAt}" /></label><br>-->
     <label>Tags: <input type="text" name="tagString" placeholder="Enter tags separated by commas" /></label><br>
     <button type="submit">Save</button>
 </form>
